--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,26 +1,27 @@
-<nav class="navbar navbar-expand-md navbar-primary bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark text-light bg-primary">
     <a class="navbar-brand" href="#">Angular</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item text-light" routerActiveLink=" active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-light" routerActiveLink=" active">
                 <a class="nav-link" routerLink="/hero">Hero</a>
-
             </li>
-
+            <li class="nav-item text-light" routerActiveLink=" active">
+                <a class="nav-link" routerLink="/heroform">HeroForm</a>
+            </li>
         </ul>
         <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item" routerActiveLink=" active">
                 <!-- <a class="nav-link" href="#">Login</a> -->
-                <a class="nav-link" routerLink="/login">Login</a>
+                <a class="nav-link text-light" routerLink="/login" routerActiveLink="active">Login</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/register">Register</a>
+            <li class="nav-item" routerActiveLink=" active">
+                <a class="nav-link text-light" routerLink="/register" routerActiveLink="active">Register</a>
 
             </li>
 
