--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <footer class="page-footer font-small mdb-color lighten-3 pt-4">
+    <footer class="page-footer font-small mdb-color lighten-3 pt-4 my-5">
 
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <div class="footer-copyright text-center ">© 2020 Copyright:
             <a href="#"> Footer</a>
         </div>
 
