--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,6 +1,6 @@
 <app-herocount [TotalHero]="getHeroesCount()"></app-herocount>
 
-<table class="table table-bordered table-hover   m-5" style="width: 30%;">
+<table class="table table-bordered table-hover table-striped  m-5" style="width: 30%;">
     <thead class="thead-dark">
         <tr>
             <th>AutoIncrment Id</th>
