--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,30 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<form #form="ngForm" (ngSubmit)="onSubmit(form)" class="m-5" style="width: 30%">
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input required minlength="3" autocomplete="off" maxlength="10" ngModel name="username" #username="ngModel"
+            (change)="log(username)" type="text" id="username" class="form-control">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>title</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
 
-<body>
-    <div class="login-form">
-        <div class="text">LOGIN</div>
-        <form>
-            <div class="field">
-                <div class="fas fa-envelope"></div>
-                <input type="text" placeholder="Email or Phone">
-            </div>
-            <div class="field">
-                <div class="fas fa-lock"></div>
-                <input type="password" placeholder="Password">
-            </div>
-            <button>LOGIN</button>
-            <div class="link">Not a member? <a href="#">Signup now</a></div>
-        </form>
+        <div class="alert alert-danger" *ngIf="username.touched && !username.valid">
+            <div *ngIf="username.errors.required">First Name is Required</div>
+            <div *ngIf="username.errors.minlength">First Name should be minimum 3 characters </div>
+            <div *ngIf="username.errors.maxlength">First Name should be maximum 10 characters</div>
+        </div>
     </div>
-</body>
 
-</html>
+
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input ngModel #password="ngModel" name="password" id="password" type="text" class="form-control">
+    </div>
+    <button class="btn btn-primary" type="submit">Sign In</button>
+</form>
