--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,30 +1,23 @@
-<nav class="navbar navbar-expand-md navbar-dark text-light bg-primary">
-    <a class="navbar-brand" href="#">Angular</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" routerLink="/home">Angular</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item text-light" routerActiveLink=" active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item text-light" routerActiveLink="active">
+                <a class="nav-link" routerLink="/home">Home</a>
             </li>
-            <li class="nav-item text-light" routerActiveLink=" active">
+            <li class="nav-item text-light" routerActiveLink="active">
                 <a class="nav-link" routerLink="/hero">Hero</a>
             </li>
-            <li class="nav-item text-light" routerActiveLink=" active">
-                <a class="nav-link" routerLink="/heroform">HeroForm</a>
-            </li>
+
         </ul>
         <ul class="navbar-nav">
-            <li class="nav-item" routerActiveLink=" active">
+            <li class="nav-item" routerActiveLink="active">
                 <!-- <a class="nav-link" href="#">Login</a> -->
                 <a class="nav-link text-light" routerLink="/login" routerActiveLink="active">Login</a>
             </li>
-            <li class="nav-item" routerActiveLink=" active">
-                <a class="nav-link text-light" routerLink="/register" routerActiveLink="active">Register</a>
-
-            </li>
-
         </ul>
     </div>
 </nav>
